# sonic_analyzer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  properties.json
cuda/: fft_kernel.cu
include/: audio_normalizer.h  fft_analyzer.h  fft_kernel.h  files_reader.h  properties.h
src/: audio_normalizer.cpp  fft_analyzer.cpp  files_reader.cpp  main.cpp  properties.cpp
